package hcmuaf.edu.vn.fit.course_service.entity;

import hcmuaf.edu.vn.fit.course_service.entity.enums.ParticipantRole;
import jakarta.persistence.*;
import lombok.Getter;
import lombok.Setter;

@Entity
@Table(name = "participants")
@Getter
@Setter
public class Participant extends AbstractEntity<Participant> {

	@Column(name = "role")
	@Enumerated(EnumType.STRING)
	private ParticipantRole participantRole;

	@ManyToOne(fetch = FetchType.LAZY)
	@JoinColumn(name = "conversation_id", nullable = false)
	private Conversation conversation;

	@Column(name = "user_id")
	private String userId;

	// BỔ SUNG: Biến lưu số lượng tin nhắn chưa đọc của riêng user này trong cuộc trò chuyện
	@Column(name = "unseen_message_count", columnDefinition = "INT DEFAULT 0")
	private Integer unseenMessageCount = 0;

}